charts/apim-gw-cicd-jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jenkins.pluto.apim.ca
    #service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-2:587976449008:certificate/7448cd4c-7625-4d57-8177-9cf18df8ede0"
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "60"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"       
  labels:
    app: apim-gw-cicd-jenkins
    chart: jenkins-0.28.3
    component: apim-gw-cicd-jenkins-master
    heritage: Tiller
    release: apim-gw-cicd
  name: apim-gw-cicd-jenkins
  namespace: default
  resourceVersion: "503255"
  selfLink: /api/v1/namespaces/default/services/apim-gw-cicd-jenkins
  uid: 7a5bbc21-d43e-11e9-b303-062032a819ca
spec:
  clusterIP: 10.100.42.135
  externalTrafficPolicy: Cluster
  ports:
  - name: https
    nodePort: 31250
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    component: apim-gw-cicd-jenkins-master
  sessionAffinity: None
  type: LoadBalancer
